changed background color on Screen 2

--- a/app/src/main/res/layout/get_name.xml
+++ b/app/src/main/res/layout/get_name.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#4CAF50"
+    android:background="#CDDC39"
     android:layout_height="match_parent"
     tools:context=".GetNameActivity">
 
